# JeTTY

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
assets/: install.sh  jetty.desktop
crates/jetty-app/: Cargo.toml
crates/jetty-app/src/: app.rs  clipboard.rs  config.rs  copymode.rs  detached.rs  input.rs  keymap.rs  lib.rs  notify.rs  palette.rs  perf.rs  shell_integration.rs  themes.rs  watch.rs
crates/jetty-app/tests/: input.rs
crates/jetty-core/: Cargo.toml
crates/jetty-core/src/: base64.rs  fuzzy.rs  hints.rs  kitty.rs  lib.rs  pty.rs  sixel.rs  snapshot.rs  terminal.rs  theme.rs  url.rs
crates/jetty-core/tests/: pty.rs  scroll.rs  theme.rs  theme_registry.rs
crates/jetty-platform/: Cargo.toml
crates/jetty-platform/src/: window.rs
crates/jetty-render/: Cargo.toml
crates/jetty-render/src/: caret_fx.rs  confirm.rs  crt.rs  focus.rs  gpu.rs  help.rs  hints.rs  image_layer.rs  lib.rs  liquid.rs  mask.rs  menu.rs  palette.rs  panel.rs  phosphor.rs  quad.rs  reveal.rs  search_bar.rs  tabbar.rs  text.rs  welcome.rs
docs/: perf-budget.md
docs/release-notes/: v0.10.0.md  v0.11.0.md  v0.12.0.md  v0.12.1.md  v0.12.2.md  v0.13.0.md  v0.14.0.md  v0.15.0.md  v0.16.0.md  v0.17.0.md  v0.18.0.md  v0.19.0.md  v0.2.0.md  v0.20.0.md  v0.21.0.md  v0.22.0.md  v0.23.0.md  v0.23.1.md  v0.3.0.md  v0.4.1.md  v0.4.2.md  v0.5.0.md  v0.6.0.md
docs/superpowers/plans/: 2026-06-30-tab-detach-reattach.md
docs/superpowers/specs/: 2026-06-29-jetty-visual-effects-design.md
scripts/: check-paint-choke.sh  livetest.sh  perf-report.sh  selftest.sh  uitest.sh  verify-idle.sh
src/: main.rs
