[workspace]
resolver = "2"
members = ["crates/jetty-core", "crates/jetty-render", "crates/jetty-platform", "crates/jetty-app"]

[package]
name = "jetty"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "jetty"
path = "src/main.rs"

[dependencies]
jetty-app = { path = "crates/jetty-app" }

# Speed-is-#1: thin LTO + single codegen unit measurably cuts CPU frame work
# (render ~8.3 -> ~6.3ms/frame) and lifts parser throughput. The user runs
# target/release/jetty directly, so the slower clean build is an acceptable trade.
[profile.release]
lto = "thin"
codegen-units = 1
