[package]
name = "jetty-app"
version = "0.14.0"
edition = "2021"

[dependencies]
jetty-core = { path = "../jetty-core" }
jetty-render = { path = "../jetty-render" }
jetty-platform = { path = "../jetty-platform" }
winit = "0.30"
pollster = "0.4"
wgpu = "29.0"
png = "0.17"
arboard = "3.6.1"
global-hotkey = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"
# Live perf-HUD CPU% sampling. OS-portable / DE-independent (no hand-rolled
# /proc or mach). Minimal feature set: only the `system` module (processes/CPU),
# with disk/network/component/user probes disabled to keep the build light.
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
# Desktop "command finished" notifications. DE-independent by design:
#   * Linux  — the `z` feature is the PURE-RUST zbus freedesktop backend, talking
#     to whatever notification daemon is running (KDE, GNOME, dunst, mako, …) over
#     org.freedesktop.Notifications. No GTK/glib, no C libdbus, no tokio. NO KDE/
#     GNOME-specific API.  (Verified via `cargo tree`: adds zbus + the smol async
#     stack; `image` stays out — `default-features=false` drops it.)
#   * macOS  — the `z`/`d` features are cfg'd off; notify-rust builds its native
#     mac-notification-sys backend automatically. (Best-effort there; the winit
#     dock-bounce urgency is the guaranteed macOS signal.)
notify-rust = { version = "4", default-features = false, features = ["z"] }
